# sccl

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CMakeLists.txt  compile_shader.cmake
examples/: CMakeLists.txt  compute_basic.cpp  compute_matrix_multiply.cpp  compute_reduce.cpp  compute_reduce_batch.cpp  examples_common.cpp  examples_common.hpp  main.cpp  multi_gpu_dmabuf.cpp
examples/shaders/: CMakeLists.txt  compute_basic_shader.comp  compute_matrix_multiply_shader.comp  compute_reduce_shader.comp  compute_reduce_shader_batch.comp
shaders/: CMakeLists.txt  common.comp  test_compute_shader.comp
src/: BinaryUtil.cpp  BinaryUtil.hpp  CMakeLists.txt  compute_interface.cpp  compute_interface.hpp  main.cpp
src/binary_util/: CMakeLists.txt  binary_util.cpp  binary_util.hpp
src/compute_interface/: CMakeLists.txt  compute_interface.c  compute_interface.cpp  compute_interface.h  compute_interface.hpp
src/sccl/: CMakeLists.txt  alloc.c  alloc.h  buffer.c  buffer.h  device.c  device.h  enviroment_variables.c  enviroment_variables.h  environment_variables.c  environment_variables.h  error.c  error.h  instance.c  instance.h  sccl.c  sccl.h  shader.c  shader.h  stream.c  stream.h  vector.c  vector.h
test/: CMakeLists.txt  common.cpp  common.hpp  test_sccl_buffer.cpp  test_sccl_copy_buffer.cpp  test_sccl_device.cpp  test_sccl_instance.cpp  test_sccl_shader.cpp  test_sccl_stream.cpp
test/shaders/: CMakeLists.txt  buffer_layout_shader.comp  copy_buffer_shader.comp  noop_shader.comp  push_constants_shader.comp  specialization_constants_shader.comp
